# datapass

./: .clippy.toml  .gitignore  .prettierignore  .treefmt.toml  COOKIE_AUTH.md  Cargo.toml  LICENSE  QUICKSTART.md  README.md  flake.nix  rustfmt.toml
.github/workflows/: ci.yml
scripts/: install-completions.sh  install-man.sh
src/: cli.rs  display.rs  error.rs  fetcher.rs  lib.rs  main.rs  parser.rs  tui.rs  types.rs
test/: Data usage - MagentaMobil Prepaid L.html  Data usage - MagentaMobil Prepaid Max.html  datapass-de-live.html
tests/: integration_tests.rs
