[package]
name = "datapass"
version = "0.1.0"
edition = "2021"
authors = ["datapass contributors"]
description = "CLI tool to fetch and display mobile data usage from datapass.de"
license = "MIT"
repository = "https://github.com/yourusername/datapass"

[[bin]]
name = "datapass"
path = "src/main.rs"

[dependencies]
# CLI argument parsing
clap = { version = "4.5", features = ["derive", "cargo"] }
clap_complete = "4.5"
clap_mangen = "0.2"

# HTTP client
reqwest = { version = "0.12", features = [
  "blocking",
  "rustls-tls",
], default-features = false }

# HTML parsing
scraper = "0.21"

# JSON serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Colored output
owo-colors = "4.1"

# Progress bars and indicators
indicatif = "0.17"

# TUI framework
ratatui = "0.29"
crossterm = "0.28"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
log = "0.4"
env_logger = "0.11"

# Time handling for TUI refresh
tokio = { version = "1.42", features = ["time", "rt"] }

[dev-dependencies]
# Testing utilities
assert_cmd = "2.0"
predicates = "3.1"

[profile.release]
opt-level = "z"   # Optimize for size
lto = true        # Enable Link Time Optimization
codegen-units = 1 # Better optimization
strip = true      # Strip symbols
panic = "abort"   # Don't generate unwinding code
